--- a/src/app/components/semaforo/semaforo.component.html
+++ b/src/app/components/semaforo/semaforo.component.html
@@ -2,19 +2,19 @@
 
     <div class="circle_trafficLight_back">
 
-        <div class="circle_trafficLight color_red" *ngIf="this.formulario.value.mode === true && this.formulario.value.select === '1'"></div>
+        <div class="circle_trafficLight color_red" *ngIf="this.formulario.value.mode && this.formulario.value.select === '1'"></div>
 
     </div>
 
     <div class="circle_trafficLight_back">
 
-        <div class="circle_trafficLight color_yellow" *ngIf="this.formulario.value.mode === true && this.formulario.value.select === '2'"></div>
+        <div class="circle_trafficLight color_yellow" *ngIf="this.formulario.value.mode && this.formulario.value.select === '2'"></div>
 
     </div>
 
     <div class="circle_trafficLight_back">
 
-        <div class="circle_trafficLight color_green" *ngIf="this.formulario.value.mode === true && this.formulario.value.select === '3'"></div>
+        <div class="circle_trafficLight color_green" *ngIf="this.formulario.value.mode  && this.formulario.value.select === '3'"></div>
 
     </div>
    
